--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ dkms.conf
 week10/web_server/node_modules
 nodejs_extract_links/node_modules
 react_question_wizard/node_modules
+week10/web_server_uploadfile/node_modules
