--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@ week10/web_server/node_modules
 nodejs_extract_links/node_modules
 react_question_wizard/node_modules
 week10/web_server_uploadfile/node_modules
+week10/web_server_gpt/node_modules
+week11/video/media
+week11/plugins/media
+week11/codecs
+week11/audio/media
